--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "dependencies": {
-    "electron": "5.0.6"
-  },
+  "name": "initial",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
     "start": "electron main.js"
+  },
+  "dependencies": {
+    "electron": "^5.0.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
